@@ -4,7 +4,7 @@
   <groupId>com.jawue</groupId>
   <artifactId>milkyway</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.8-SNAPSHOT</version>
   <name>milkyway</name>
   <url>http://maven.apache.org</url>
 <properties>
@@ -26,6 +26,13 @@
 
   </dependencies>
 <build>
+    <resources>
+        <resource>
+            <targetPath>resources</targetPath>
+            <directory>${basedir}/src/main/resources</directory>
+        </resource>
+
+    </resources>
     <plugins>
             <!-- Maven Shade Plugin -->
         <plugin>
@@ -50,24 +57,9 @@
               </execution>
           </executions>
       </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>20</source>
-                <target>20</target>
-                <compilerArgs>--enable-preview</compilerArgs>
-            </configuration>
-        </plugin>
+
 
     </plugins>
-<resources>
-       <resource>
-             <targetPath>resources</targetPath>
-             <directory>${basedir}/src/main/resources</directory>
-        </resource>
-
- </resources>
 
   </build>
 <repositories>
